--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Second Repo</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>This is my second repository</h1>
-    <h2>Salar jontrona!!</h2>
-    <h3>mela jhamelar jinish re!!!!!!!!!!!!</h3>
+    <div class="container">
+      <h1>Biya khabar gesilam</h1>
+      <h2>Salar jontrona!!</h2>
+      <h3>Vab to kom na!</h3>
+      <img src="talking.jpg" alt="" />
+    </div>
   </body>
 </html>
