--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
   <body>
     <div class="container">
       <h1>Biya khabar gesilam</h1>
-      <h2>Salar jontrona!!</h2>
-      <h3>Vab to kom na!</h3>
+      <h2>Vab kintu valoi!</h2>
       <img src="talking.jpg" alt="" />
     </div>
   </body>
