notun container add korlam

--- a/index.html
+++ b/index.html
@@ -13,5 +13,10 @@
       <h2>Vab kintu valoi!</h2>
       <img src="talking.jpg" alt="" />
     </div>
+    <div class="container">
+      <h1>Khaoa seshe part Nilam</h1>
+      <h2>Aribbas!</h2>
+      <img src="part.jpg" alt="" />
+    </div>
   </body>
 </html>
